Beginning to add PyQt5 support.
PyQt5 seems to work, but the qgis modules are broken. It seems QXml is
not supported in PyQt5, so some things might need to be rewritten.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -589,28 +589,33 @@ IF (WITH_BINDINGS)
   FIND_PACKAGE(PythonInterp REQUIRED)
   FIND_PACKAGE(PythonLibrary REQUIRED)
   FIND_PACKAGE(SIP REQUIRED)
-IF (QT5_BUILD)
-  FIND_PACKAGE(PyQt5 REQUIRED)
-ELSE()
-  FIND_PACKAGE(PyQt4 REQUIRED)
-ENDIF()
+  IF (QT5_BUILD)
+    FIND_PACKAGE(PyQt5 REQUIRED)
+  ELSE()
+    FIND_PACKAGE(PyQt4 REQUIRED)
+  ENDIF()
   FIND_PACKAGE(Qsci REQUIRED)
   INCLUDE(PythonMacros)
   INCLUDE(SIPMacros)
-  INCLUDE(PyQt4Macros)
+  
+  IF (QT5_BUILD)
+    INCLUDE(PyQt5Macros)
+  ELSE()
+    INCLUDE(PyQt4Macros)
+  ENDIF()
 
   # setup SIP variables
-  SEPARATE_ARGUMENTS(PYQT4_SIP_FLAGS) # convert space separated values to a list
-  SET(SIP_INCLUDES ${PYQT4_SIP_DIR} ${CMAKE_SOURCE_DIR}/python)
+  SEPARATE_ARGUMENTS(PYQT_SIP_FLAGS) # convert space separated values to a list
+  SET(SIP_INCLUDES ${PYQT_SIP_DIR} ${CMAKE_SOURCE_DIR}/python)
   SET(SIP_CONCAT_PARTS 4)
-  SET(SIP_EXTRA_OPTIONS ${PYQT4_SIP_FLAGS})
+  SET(SIP_EXTRA_OPTIONS ${PYQT_SIP_FLAGS})
 
   IF (NOT BINDINGS_GLOBAL_INSTALL)
     SET(PYTHON_SITE_PACKAGES_DIR ${QGIS_DATA_DIR}/python)
   ENDIF (NOT BINDINGS_GLOBAL_INSTALL)
 
   IF (WITH_CUSTOM_WIDGETS)
-    SET(PYUIC_WIDGET_PLUGIN_DIRECTORY ${PYQT4_MOD_DIR}/uic/widget-plugins/)
+    SET(PYUIC_WIDGET_PLUGIN_DIRECTORY ${PYQT_MOD_DIR}/uic/widget-plugins/)
   ENDIF (WITH_CUSTOM_WIDGETS)
 
 ENDIF (WITH_BINDINGS)
