--- a/mac/cmake/1qt.cmake.in
+++ b/mac/cmake/1qt.cmake.in
@@ -137,50 +137,50 @@ IF (NOT EXISTS "${QGISPYDIR}/sip.so")
     EXECUTE_PROCESS (COMMAND cp -fp "@SIP_MOD_DIR@/sipconfig.py" "${QGISPYDIR}/")
 ENDIF ()
 
-# if PYQT4_MOD_DIR not defined, assume "PyQt4" next to SIP
-SET(PYQT4MODDIR "@SIP_MOD_DIR@/PyQt${QT_FWVER}")
-IF (EXISTS "@PYQT4_MOD_DIR@")
-    SET(PYQT4MODDIR "@PYQT4_MOD_DIR@")
-    # MESSAGE (STATUS "Defined PYQT4_MOD_DIR: @PYQT4_MOD_DIR@")
+# if PYQT_MOD_DIR not defined, assume "PyQt4" next to SIP
+SET(PYQTMODDIR "@SIP_MOD_DIR@/PyQt${QT_FWVER}")
+IF (EXISTS "@PYQT_MOD_DIR@")
+    SET(PYQTMODDIR "@PYQT_MOD_DIR@")
+    # MESSAGE (STATUS "Defined PYQT_MOD_DIR: @PYQT_MOD_DIR@")
 ENDIF ()
 # also search python site-packages/PyQt4, in case module packages installed elsewhere and symlinked
 # (common with binary installers like homebrew)
-SET(PYQT4MODALT "@PYTHON_SITE_PACKAGES_SYS@/PyQt4")
-#MESSAGE (STATUS "Defined PYQT4MODALT: ${PYQT4MODALT}")
+SET(PYQTMODALT "@PYTHON_SITE_PACKAGES_SYS@/PyQt4")
+#MESSAGE (STATUS "Defined PYQTMODALT: ${PYQTMODALT}")
 
 EXECUTE_PROCESS (COMMAND mkdir -p "${QGISPYDIR}/PyQt${QT_FWVER}")
 FOREACH (PQ ${PYQTLIST})
     SET(MODNAME "${PQ}.so")
-    IF(EXISTS "${PYQT4MODDIR}/${MODNAME}")
-        SET(PYQT4MOD "${PYQT4MODDIR}/${MODNAME}")
-    ELSEIF(EXISTS "${PYQT4MODALT}/${MODNAME}")
-        SET(PYQT4MOD "${PYQT4MODALT}/${MODNAME}")
+    IF(EXISTS "${PYQTMODDIR}/${MODNAME}")
+        SET(PYQTMOD "${PYQTMODDIR}/${MODNAME}")
+    ELSEIF(EXISTS "${PYQTMODALT}/${MODNAME}")
+        SET(PYQTMOD "${PYQTMODALT}/${MODNAME}")
     ENDIF()
-    IF (EXISTS "${PYQT4MOD}")
+    IF (EXISTS "${PYQTMOD}")
         IF (NOT EXISTS "${QGISPYDIR}/PyQt${QT_FWVER}/${MODNAME}")
-            # MESSAGE (STATUS "ditto ${QARCHS} \"${PYQT4MOD}\" \"${QGISPYDIR}/PyQt${QT_FWVER}/${MODNAME}\"")
-            EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "${PYQT4MOD}" "${QGISPYDIR}/PyQt${QT_FWVER}/${MODNAME}")
+            # MESSAGE (STATUS "ditto ${QARCHS} \"${PYQTMOD}\" \"${QGISPYDIR}/PyQt${QT_FWVER}/${MODNAME}\"")
+            EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "${PYQTMOD}" "${QGISPYDIR}/PyQt${QT_FWVER}/${MODNAME}")
         ENDIF ()
-    ELSE (EXISTS "${PYQT4MOD}")
+    ELSE (EXISTS "${PYQTMOD}")
         MESSAGE (STATUS "PyQt4 module ${MODNAME} not found")
-    ENDIF (EXISTS "${PYQT4MOD}")
-    UNSET(PYQT4MOD)
+    ENDIF (EXISTS "${PYQTMOD}")
+    UNSET(PYQTMOD)
 ENDFOREACH (PQ)
-FILE (GLOB PQPYLIST "${PYQT4MODDIR}/*.py")
+FILE (GLOB PQPYLIST "${PYQTMODDIR}/*.py")
 FOREACH (PQPY ${PQPYLIST})
     EXECUTE_PROCESS (COMMAND cp -fp "${PQPY}" "${QGISPYDIR}/PyQt${QT_FWVER}/")
 ENDFOREACH (PQPY)
-EXECUTE_PROCESS (COMMAND cp -Rfp "${PYQT4MODDIR}/uic" "${QGISPYDIR}/PyQt${QT_FWVER}")
+EXECUTE_PROCESS (COMMAND cp -Rfp "${PYQTMODDIR}/uic" "${QGISPYDIR}/PyQt${QT_FWVER}")
 
 # PyQt utilities
 
 FOREACH (PU pylupdate4;pyrcc4)
     IF (NOT EXISTS "${QBINDIR}/${PU}")
-        EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "@PYQT4_BIN_DIR@/${PU}" "${QBINDIR}/")
+        EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "@PYQT_BIN_DIR@/${PU}" "${QBINDIR}/")
     ENDIF ()
 ENDFOREACH (PU)
 IF (NOT EXISTS "${QBINDIR}/pyuic4")
-    EXECUTE_PROCESS (COMMAND sed -E "s, /.*/PyQt4/uic/pyuic.py, \"\$(/usr/bin/dirname \"\$0\")/../../Resources/python/PyQt4/uic/pyuic.py\"," "@PYQT4_BIN_DIR@/pyuic4"
+    EXECUTE_PROCESS (COMMAND sed -E "s, /.*/PyQt4/uic/pyuic.py, \"\$(/usr/bin/dirname \"\$0\")/../../Resources/python/PyQt4/uic/pyuic.py\"," "@PYQT_BIN_DIR@/pyuic4"
                      OUTPUT_VARIABLE PYUIC_CONTENTS)
     FILE (WRITE "${QBINDIR}/pyuic4" "${PYUIC_CONTENTS}")
     EXECUTE_PROCESS (COMMAND chmod +x "${QBINDIR}/pyuic4")
@@ -189,16 +189,16 @@ ENDIF ()
 # PyQwt
 # only if it's available, not compatible with newer PyQt
 
-IF (EXISTS "${PYQT4MODDIR}/Qwt5/_iqt.so")
+IF (EXISTS "${PYQTMODDIR}/Qwt5/_iqt.so")
     MESSAGE (STATUS "Copying PyQwt and updating library paths...")
     EXECUTE_PROCESS (COMMAND mkdir -p "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5")
     IF (NOT EXISTS "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5/_iqt.so")
-        EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "${PYQT4MODDIR}/Qwt5/_iqt.so" "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5/")
+        EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "${PYQTMODDIR}/Qwt5/_iqt.so" "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5/")
     ENDIF ()
     IF (NOT EXISTS "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5/Qwt.so")
-        EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "${PYQT4MODDIR}/Qwt5/Qwt.so" "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5/")
+        EXECUTE_PROCESS (COMMAND ditto ${QARCHS} "${PYQTMODDIR}/Qwt5/Qwt.so" "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5/")
     ENDIF ()
-    FILE (GLOB PQWPYLIST "${PYQT4MODDIR}/Qwt5/*.py")
+    FILE (GLOB PQWPYLIST "${PYQTMODDIR}/Qwt5/*.py")
     FOREACH (PQWPY ${PQWPYLIST})
         EXECUTE_PROCESS (COMMAND cp -fp "${PQWPY}" "${QGISPYDIR}/PyQt${QT_FWVER}/Qwt5/")
     ENDFOREACH (PQWPY)
